feat(Dynamic Sorts): add sorting by jewelry, materials, movements, pendings to restock and sales | fix(add jewel to inventory): now when any jewel is added to an authorized inventory, the materials are added to the inventory.